fix for button class on specials page, and fix for home page links where padding was causing misalignment

--- a/web/themes/custom/rosewood/scss/style.scss
+++ b/web/themes/custom/rosewood/scss/style.scss
@@ -132,6 +132,10 @@ p.warning {
   }
 }
 
+p.center-align {
+  text-align: center;
+}
+
 body h2 {
   font-size: 3rem;
 }
@@ -435,6 +439,10 @@ input, select, textarea,
       font-size: 1.8rem;
     }
   }
+}
+
+.view-promoted-categories .view-content .views-field a {
+  padding-top: 0;
 }
 
 .main-container .field--name-field-choose-options-form {
